# ceres_mono_orb_slam2

./: .gitignore  CMakeLists.txt  build_thirdparty.sh
configs/: EuRoC.yaml
example/: mono_euroc.cc
include/: Frame.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  MapDrawer.h  ORBVocabulary.h  System.h  Tracking.h  Viewer.h  Wrapper.h
server/: api_server.py  client.js  index.html  main.py  server.py
src/: CeresOptimizer.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Osmap.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc  Wrapper.cc
test/: mono_euroc.py
